--- a/css/theme.css
+++ b/css/theme.css
@@ -26,6 +26,13 @@ header .navbar {
     /* background-color: #3498db !important; */
     z-index: 9999;
 }
+.navbar ul li a {
+    transition: .8s;
+    text-transform: uppercase;
+}
+.navbar ul li a:hover,.navbar ul li.active a {
+    color: #17A2B8 !important;
+}   
 
 #carouselExampleIndicators ol li {
     background-color: #ffffff;
